RESOLVED FIXED171804
CoreAudioCaptureSource should not modify its shared unit if already started/stopped
https://bugs.webkit.org/show_bug.cgi?id=171804
Summary CoreAudioCaptureSource should not modify its shared unit if already started/s...
youenn fablet
Reported 2017-05-08 08:29:28 PDT
Currently, the shared unit use counter is updated overtime startProducingData/stopProducingData is called.
Attachments
Patch (1.91 KB, patch)
2017-05-08 08:31 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-05-08 08:31:34 PDT
Radar WebKit Bug Importer
Comment 2 2017-05-08 09:57:21 PDT
WebKit Commit Bot
Comment 3 2017-05-08 10:31:57 PDT
Comment on attachment 309360 [details] Patch Clearing flags on attachment: 309360 Committed r216432: <http://trac.webkit.org/changeset/216432>
WebKit Commit Bot
Comment 4 2017-05-08 10:31:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.