CoreAudioCaptureSource should not modify its shared unit if already started/stopped https://bugs.webkit.org/show_bug.cgi?id=171804

Patch by Youenn Fablet <youenn@apple.com> on 2017-05-08
Reviewed by Jer Noble.

Manual testing only since CoreAudioSharedUnit is not mocked.

* platform/mediastream/mac/CoreAudioCaptureSource.cpp:
(WebCore::CoreAudioCaptureSource::startProducingData): Exit early if source is already started.
(WebCore::CoreAudioCaptureSource::stopProducingData): Exit early if source is already stopped.

Canonical link: https://commits.webkit.org/188720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@216432 268f45cc-cd09-0410-ab3c-d52691b4dbfc