Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.cpp
@@ -622,6 +622,9 @@ void CoreAudioCaptureSource::removeEchoCancellationSource(AudioSampleDataSource&
 
 void CoreAudioCaptureSource::startProducingData()
 {
+    if (m_isProducingData)
+        return;
+
 #if PLATFORM(IOS)
     coreAudioCaptureSourceFactory().setActiveSource(*this);
 #endif
@@ -640,6 +643,9 @@ void CoreAudioCaptureSource::startProducingData()
 
 void CoreAudioCaptureSource::stopProducingData()
 {
+    if (!m_isProducingData)
+        return;
+    
     CoreAudioSharedUnit::singleton().stopProducingData();
     m_isProducingData = false;
     m_muted = false;
